Updated title to reflect renamed repository

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Simple React Time Picker</title>
+    <title>React Drop-down Time Picker</title>
   </head>
   <body>
-    <h1>Simple React Time Picker</h1>
+    <h1>React Drop-down Time Picker</h1>
     <section>
       <a href="https://github.com/dpalma/react-dropdown-timepicker">
         <i class="fa fa-github"></i>
